--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -95,23 +95,15 @@
 
         import {getData} from "/js/api-function.js";
 
+        async function getAllDepartments() {
+            return await getData('/api/department/list')
+        }
+
         const motherContainer = document.querySelector("#sort-container");
 
         const fragment = document.createDocumentFragment();
 
-        function getAllDepartments() {
-            return fetch('/api/department/list')
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    return response.json();
-                })
-                .catch(error => {
-                    console.error('Fetch error:', error);
-                    throw error;
-                });
-        }
+
 
         let dpList = [];
 
@@ -153,6 +145,7 @@
 // Create the <h5> element with class "mb-1 card-title modal-detail-title"
                         const title = document.createElement("h5");
                         title.classList.add("mb-1", "card-title", "modal-detail-title");
+                        title.setAttribute("id", `DH-id-${currentDp.id}`)
                         title.textContent = currentDp.name;
 
 // Create the <div> for the group of avatar images
@@ -187,76 +180,59 @@
 
                         seeMoreButton.addEventListener("click", function (e) {
 
-                            getData(`/api/department/byId/${currentDp.id}`, (error, data) => {
-                                if(error) {
-                                    console.error(error)
-                                } else {
+                            getData(`/api/department/byId/${currentDp.id}`).then(data => {
+                                console.log(data)
                                     document.querySelector("#department-id").value = data.id;
                                     document.querySelector("#edit-department-name").value = data.name;
                                 }
+                            ).catch(error => console.log(error))
+                            getData(`/api/user/count/departmentId/${currentDp.id}`).then(data => {
+                                document.querySelector("#total-member").textContent = data
+                            }).catch(error => console.log(error))
 
-                            });
-                            getData(`/api/user/count/departmentId/${currentDp.id}` , (error,data) => {
-                                if(error){
-                                    console.error(error)
-                                }else{
-                                    document.querySelector("#total-member").textContent = data
-                                }
-                            })
-                            getData(`/api/project/count/departmentId/${currentDp.id}` , (error,data) => {
-                                if(error){
-                                    console.error(error)
-                                }else{
-                                    document.querySelector("#total-project").textContent = data
-                                }
-                            })
+                            getData(`/api/project/count/departmentId/${currentDp.id}`).then(data => {
+                                document.querySelector("#total-project").textContent = data
+                            }).catch(error => console.log(error))
 
                             // First, get the selected department head's information and display it
                             let selected_department_head;
 
-                            getData(`/api/user/role/DEPARTMENT_HEAD/departmentId/${currentDp.id}`, (error, data) => {
-                                if (error) {
-                                    console.error(error);
-                                } else {
-                                    const departmentHeadElement = document.querySelector("#department-head");
-                                    departmentHeadElement.textContent = data.name;
-                                    selected_department_head = data;
-
-                                    // Call the function to populate the select box using the selected_department_head
-                                    populateSelectBox(selected_department_head);
-                                }
-                            });
+                            getData(`/api/user/role/DEPARTMENT_HEAD/departmentId/${currentDp.id}`).then(data => {
+                                const departmentHeadElement = document.querySelector("#department-head");
+                                departmentHeadElement.textContent = data.name;
+                                selected_department_head = data;
+                                console.log("DH for the current dp", data)
+                                // Call the function to populate the select box using the selected_department_head
+                                populateSelectBox(selected_department_head);
+                            }).catch(error => console.log(error))
 
                             function populateSelectBox(selectedData) {
                                 // Get the list of department heads
-                                getData(`/api/user/list/role/DEPARTMENT_HEAD`, (error, dataList) => {
+                                getData(`/api/user/list/role/DEPARTMENT_HEAD`).then(dataList => {
+
                                     console.log("All Department Head : " + dataList);
                                     console.log("Selected Department Head : " + selectedData.name);
-                                    if (error) {
-                                        console.error(error);
-                                    } else {
-                                        const selectElement = document.querySelector("#departmenthead");
 
-                                        // Clear existing options
-                                        selectElement.innerHTML = '';
+                                    const selectElement = document.querySelector("#departmenthead");
 
-                                        // Iterate over the data and add new options
-                                        dataList.forEach(departmentHead => {
-                                            const option = document.createElement("option");
-                                            option.value = departmentHead.id; // Set the value as needed
-                                            option.text = departmentHead.name; // Set the text as needed
-                                            selectElement.appendChild(option);
+                                    // Clear existing options
+                                    selectElement.innerHTML = '';
 
-                                            // Pre-select the department head that matches the selected department head
-                                            if (selectedData.id === departmentHead.id) {
-                                                option.selected = true;
-                                            }
-                                        });
-                                    }
-                                });
+                                    // Iterate over the data and add new options
+                                    dataList.forEach(departmentHead => {
+                                        const option = document.createElement("option");
+                                        option.value = departmentHead.id; // Set the value as needed
+                                        option.text = departmentHead.name; // Set the text as needed
+                                        selectElement.appendChild(option);
+
+                                        // Pre-select the department head that matches the selected department head
+                                        if (selectedData.id === departmentHead.id) {
+                                            option.selected = true;
+                                        }
+                                    });
+                                }).catch(error => console.log(error))
+
                             }
-
-
 
                         });
 
@@ -288,7 +264,39 @@
             });
 
 
+        $("#edit-department").click(function(e) {
+            // Prevent the default form submission
+            console.log("Reach In Function.")
+            // Gather data from the form
+            var departmentId = $("#department-id").val();
+            var departmentName = $("#edit-department-name").val();
 
+            console.log("Id : " + departmentId);
+
+            // Create an object to represent the data to be sent to the server
+            var data = {
+                id : departmentId,
+                name: departmentName,
+            };
+
+            console.log("ID : " +data)
+            console.log("Data Id : " + data.id)
+            console.log("Data Name : " + data.name)
+            // Send an AJAX request to update the department
+            $.ajax({
+                type: "PUT", // Use PUT method to update data
+                url: `api/department/lists/update/${departmentId}`, // Replace with your server-side endpoint URL
+                data: JSON.stringify(data),
+                contentType:"application/json",
+                success: function(response) {
+                    // Handle the success response from the server, e.g., display a success message
+                    $(`#DH-id-${response.id}`).text(response.name)
+                    $('#staticBackdropLabel').text(response.name)
+                },
+
+
+            });
+        });
 
 
 
@@ -428,7 +436,7 @@
                                     </div>
 
                                     <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
-                                        <form id="edit-department">
+
                                             <div>
                                                 <input type="hidden" id="department-id" name="department-id">
                                             </div>
@@ -447,12 +455,10 @@
                                             </div>
                                             <br/>
 
-                                            <button style="
-                                                        background-color: #369;
-                                                    " type="submit" class="btn btn-primary py-2 w-100 mb-3"
-                                                    id="update-btn">Edit
+                                            <button  style="background-color: #369;" type="submit" class="btn btn-primary py-2 w-100 mb-3"
+                                                    id="edit-department">Edit
                                             </button>
-                                        </form>
+
                                     </div>
                                 </div>
                                 <!-- End Bordered Tabs -->
@@ -501,7 +507,7 @@
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
-<script>
+<script type="module">
 
     const ctx = document.getElementById("department-projects-chart");
 
@@ -613,34 +619,7 @@
     });
 
     $(document).ready(function() {
-        $("#edit-department").submit(function(e) {
-            e.preventDefault(); // Prevent the default form submission
 
-            // Gather data from the form
-            var departmentId = $("#department-id").val();
-            var departmentName = $("#edit-department-name").val();
-
-            console.log("Id : " + departmentId);
-
-            // Create an object to represent the data to be sent to the server
-            var data = {
-                departmentId : departmentId,
-                departmentname: departmentName,
-            };
-
-
-            // Send an AJAX request to update the department
-            $.ajax({
-                type: "PUT", // Use PUT method to update data
-                url: `/lists/update/${departmentId}`, // Replace with your server-side endpoint URL
-                data: data,
-                success: function(response) {
-                    // Handle the success response from the server, e.g., display a success message
-                    alert("Department updated successfully: " + response);
-                },
-
-            });
-        });
     });
 
 
