--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -245,6 +245,50 @@
                         { id: 5, tech_name: "spring boot" },
                     ],
                 },
+                {
+                    id: 2,
+                    name: "project name",
+                    start_date: 1696377600000,
+                    end_date: 1701648000000,
+                    user: { id: 2, name: "zawlinshein" },
+                    background: "project background",
+                    currentPhase: "TESTING",
+                    department: { id: 1, name: "department name" },
+                    objective: `<p>Hello World!</p><p>This is Quill <strong>full</strong>editor</p>`,
+                    inReview: 25,
+                    exReview: 2,
+                    client: {
+                        id: 1,
+                        name: "Dat",
+                        phone: "09 77558833",
+                        email: "suckmyfingure@gmail.com",
+                    },
+                    totalTask: 100,
+                    doneTask: 50,
+                    amount: {
+                        basicDesign: 0,
+                        detailDesign: 0,
+                        coding: 0,
+                        unitTesting: 0,
+                        integratedTesting: 0,
+                    },
+                    systemOutline: {
+                        analysis: true,
+                        sys_design: true,
+                        coding: false,
+                        testing: false,
+                        deploy: true,
+                        maintenance: true,
+                        document: true,
+                    },
+                    architecutre: [
+                        { id: 1, tech_name: "html" },
+                        { id: 2, tech_name: "mysql" },
+                        { id: 3, tech_name: "js" },
+                        { id: 4, tech_name: "java" },
+                        { id: 5, tech_name: "spring boot" },
+                    ],
+                }
             ];
 
             document
