trying to fix error

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -705,8 +705,8 @@
                         end_date: endDate,
                         background: background,
                         architectureDto: result,
-                        system_outlines: systemOutlines,
-                        deliverable: deliverable,
+                        systemOutLineDto: systemOutlines,
+                        deliverableDto: deliverable,
                         objective: objective,
                     };
                     log(project);
