--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -93,6 +93,9 @@
     <script src="/js/custome.js" defer></script>
     <script type="module" defer>
 
+
+        //department list ________________________________________________
+        //________________________________________________________________
         import {getData} from "/js/api-function.js";
 
         const motherContainer = document.querySelector("#sort-container");
@@ -174,7 +177,8 @@
                             avatarLink.appendChild(avatarIcon);
                             mediaGroup.appendChild(avatarLink);
                         }
-
+//department list end_________________________________________________________________________
+//____________________________________________________________________________________________
 // Create the "See More" button
                         const seeMoreButton = document.createElement("a");
                         seeMoreButton.href = "";
@@ -259,7 +263,8 @@
 
 
                         });
-
+//sermore end _________________________________________________________
+//_____________________________________________________________________
 
 
 
