--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -1185,7 +1185,7 @@ vs
                         });
 
                         // Load events for the selected week
-                        calendar.events.load("/api/tasks");
+                        calendar.events.load("/api/tasks/list");
                     },
                     nav: {
                         top: {
