Dashboard  Bug Fixes

--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -36,7 +36,7 @@
                 <a href="" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addEmployeeModal">Add Employee</a>
                 <!--open modal to register employee account-->
             </div>
-            <table id="table" data-toggle="table" data-toolbar="#toolbar" data-toolbar-align="right" data-search="true" data-header-style="headerStyle" data-url="/api/user/list">
+            <table class="border border-primary" id="table" data-toggle="table" data-toolbar="#toolbar" data-toolbar-align="right" data-search="true" data-header-style="headerStyle" data-url="/api/user/list">
                 <thead class="thead-dark text-center text-white font-weight-bold text-uppercase bg-primary rounded shadow-sm p-3 mb-5">
                 <tr>
                     <th data-sortable="true" data-formatter="indexFormatter" data-align="left" data-valign="middle" data-width="100" >No.</th>
@@ -48,7 +48,7 @@
                 </tr>
                 </thead>
 
-                <tbody>
+                <tbody >
                 </tbody>
 
 
