--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -256,7 +256,7 @@
                 });
 
                 //Dummy data for kpi chart
-             const screenCountsData = [120, 130, 140, 135, 150, 155, 160, 165, 170, 175, 180, 185];
+             const screenCountsData = [90, 130, 140, 135, 150, 155, 160, 165, 170, 175, 180, 185];
              const testCasesData = [100, 110, 115, 120, 125, 130, 135, 140, 145, 150, 155, 160];
              const kStepData = [50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100, 105];
              const reviewCountsData = [30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85]; // Assuming review counts
@@ -327,7 +327,7 @@
                         },
                             {
                                 label: 'Target Productivity',
-                                data: Array(targetData.length).fill(100), // Creates an array of 100s matching the length of the data
+                                data: Array(months.length).fill(100), // Creates an array of 100s matching the length of the data
                                 backgroundColor: 'rgba(255, 99, 132, 0.2)', // Set a different color for the target line
                                 borderColor: 'rgba(255, 99, 132, 1)',
                                 borderDash: [5, 5], // Dotted line for target productivity
