--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,22 +26,19 @@
     <link rel="stylesheet" href="/lib/quill/quill.snow.css"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/css/multi-select-tag.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/css/multi-select-tag.css">
 
-    <link href="/css/daypilot.css" rel="stylesheet" type="text/css">
-
-    <!-- datepicker -->
+    <!-- toast ui calendar -->
+    <link rel="stylesheet" href="https://uicdn.toast.com/calendar/latest/toastui-calendar.min.css" />
     <link
             rel="stylesheet"
-            type="text/css"
             href="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.css"
     />
     <link
             rel="stylesheet"
-            type="text/css"
             href="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.css"
     />
-
 
 
     <!--  select-->
@@ -58,7 +55,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.css">
     <!-- Template Stylesheet -->
     <link href="/css/style.css" rel="stylesheet"/>
-    <link href="/css/bootstrap-select2.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap-select2.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 
 </head>
